# AutomaticProver

./: CMakeLists.txt  main.cpp
examples/: group_axioms.cpp  order_axioms.cpp  prepositional_example.cpp
exception/: InvalidSubstitutionException.cpp  InvalidSubstitutionException.h  ProofLengthException.cpp  ProofLengthException.h
factory/: IdentifiedVariableFactory.h  VariableFactory.cpp  VariableFactory.h
predicate/: Clause.cpp  Clause.h  Predicate.cpp  Predicate.h
prover/: HerbrandProver.cpp  HerbrandProver.h  LinearResolutionProver.cpp  LinearResolutionProver.h  Prover.cpp  Prover.h  ResolutionProver.cpp  ResolutionProver.h  SemanticProver.cpp  SemanticProver.h
symbol/: Identifiable.h  IdentifiableSymbol.h  IdentifiedSymbol.h  Literal.cpp  Literal.h  Substitution.cpp  Substitution.h  Symbol.h  SymbolicFunction.cpp  SymbolicFunction.h  SymbolicPredicate.cpp  SymbolicPredicate.h  Variable.cpp  Variable.h
system/: Field.cpp  Field.h  Group.cpp  Group.h  IntegralRing.cpp  PredicateSystem.cpp  PredicateSystem.h  PrepositionalSystem.cpp  PrepositionalSystem.h  Ring.cpp  Ring.h  System.cpp  System.h  SystemWithEquality.cpp  SystemWithEquality.h  SystemWithPartialOrder.cpp  SystemWithPartialOrder.h  SystemWithTotalOrder.cpp  SystemWithTotalOrder.h
system/algebraic/: CommutativeGroup.cpp  CommutativeGroup.h  CommutativeRing.cpp  CommutativeRing.h  Field.cpp  Group.cpp  Group.h  IntegralRing.h  MedianAlgebra.cpp  MedianAlgebra.h  Ring.cpp  Ring.h
