cmake_minimum_required(VERSION 3.19)
project(AutomaticProver)

set(CMAKE_CXX_STANDARD 20)

include_directories(.)

add_executable(AutomaticProver main.cpp symbol/Symbol.h system/SystemWithEquality.cpp system/SystemWithEquality.h symbol/SymbolicFunction.cpp symbol/SymbolicFunction.h symbol/Variable.cpp symbol/Variable.h symbol/Literal.cpp symbol/Literal.h predicate/Clause.cpp predicate/Clause.h factory/VariableFactory.cpp factory/VariableFactory.h symbol/SymbolicPredicate.cpp symbol/SymbolicPredicate.h predicate/Predicate.cpp predicate/Predicate.h system/System.cpp system/System.h exception/ProofLengthException.cpp exception/ProofLengthException.h symbol/IdentifiedSymbol.h symbol/Identifiable.h symbol/IdentifiableSymbol.h factory/IdentifiedVariableFactory.h system/SystemWithPartialOrder.cpp system/SystemWithPartialOrder.h system/SystemWithTotalOrder.cpp system/SystemWithTotalOrder.h system/Group.cpp system/Group.h)

add_executable(GroupTheoryExample examples/group_axioms.cpp system/SystemWithEquality.cpp system/SystemWithEquality.h symbol/Symbol.h symbol/SymbolicFunction.cpp symbol/SymbolicFunction.h symbol/Variable.cpp symbol/Variable.h symbol/Literal.cpp symbol/Literal.h predicate/Clause.cpp predicate/Clause.h factory/VariableFactory.cpp factory/VariableFactory.h symbol/SymbolicPredicate.cpp symbol/SymbolicPredicate.h predicate/Predicate.cpp predicate/Predicate.h system/System.cpp system/System.h exception/ProofLengthException.cpp exception/ProofLengthException.h symbol/IdentifiedSymbol.h symbol/Identifiable.h symbol/IdentifiableSymbol.h factory/IdentifiedVariableFactory.h system/SystemWithPartialOrder.cpp system/SystemWithPartialOrder.h system/SystemWithTotalOrder.cpp system/SystemWithTotalOrder.h system/Group.cpp system/Group.h)

add_executable(OrderTheoryExample examples/order_axioms.cpp system/SystemWithEquality.cpp system/SystemWithEquality.h symbol/Symbol.h symbol/SymbolicFunction.cpp symbol/SymbolicFunction.h symbol/Variable.cpp symbol/Variable.h symbol/Literal.cpp symbol/Literal.h predicate/Clause.cpp predicate/Clause.h factory/VariableFactory.cpp factory/VariableFactory.h symbol/SymbolicPredicate.cpp symbol/SymbolicPredicate.h predicate/Predicate.cpp predicate/Predicate.h system/System.cpp system/System.h exception/ProofLengthException.cpp exception/ProofLengthException.h symbol/IdentifiedSymbol.h symbol/Identifiable.h symbol/IdentifiableSymbol.h factory/IdentifiedVariableFactory.h system/SystemWithPartialOrder.cpp system/SystemWithPartialOrder.h system/SystemWithTotalOrder.cpp system/SystemWithTotalOrder.h system/Group.cpp system/Group.h)